add java 9 bean framework [skip ci]